--- a/javascript.html
+++ b/javascript.html
@@ -26,7 +26,7 @@
 
                 else {
 
-                    alert("opps, try again!")
+                    alert("opps, try again! The number was " + magic)
                 }
             }
         </script>
